update authetication
